manifests/base/monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: REPLACE_HERE
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              name: http
        path: /
        pathType: Prefix
